--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@ p {
 	transition: all ease 0.5s;
 }
 .footer-bg {
-	background-color: #2d2d2d;
+	background-color: #67c18c;
 	border-top:5px solid #67c18c;
 }
 .footer-bg i {
