--- a/css/style.css
+++ b/css/style.css
@@ -484,6 +484,29 @@ ul.gallery li{
 .bg-offiwhite {
 	background-image: url("../images/shape-mobile.png");
 }
+	.logo-caption{
+		text-transform: capitalize;
+		color: white; 
+		position:relative; 
+		left:-40px;
+	}
+
+	.logo-head{
+		text-transform: capitalize;color: white;font-size: 25px; position:relative; left:-40px
+	}
+	
+	.menu .nav {
+		position: relative;
+		right: 10px;
+	}
+
+	.menu .oraganization h3{
+		font-size: 20px;
+	}
+
+	.menu .nav > li > a {
+		font-size: 12px;
+	}
 }
 @media only screen and (min-width:992px) and (max-width: 1200px) {
 .bg-offiwhite {
@@ -554,3 +577,19 @@ ul.gallery li{
 	position: relative;
 	right: 50px;
 }
+
+
+@media (min-width:1900px) and (max-width: 6000px) {
+
+	.logo-caption{
+		text-transform: capitalize;
+		color: white; 
+		position:relative; 
+		left:-130px;
+	}
+
+	.logo-head{
+		text-transform: capitalize;color: white;font-size: 35px; position:relative; left:-130px
+	}
+}
+
