Revert "Merge branch 'main' of https://github.com/shahnawazz771/unitedpeacefoundation into main"
This reverts commit c040ba44c3d08b45bfc8c14ee60eec55f3e4649e.

--- a/css/style.css
+++ b/css/style.css
@@ -589,11 +589,7 @@ ul.gallery li{
 	}
 
 	.logo-head{
-		text-transform: capitalize;
-		color: white;
-		font-size: 35px; 
-		position:relative; 
-		left:-130px
+		text-transform: capitalize;color: white;font-size: 35px; position:relative; left:-130px
 	}
 }
 
