--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 @font-face { font-family: EKplain; src: url('../fonts/EKPLB.ttf'); } 
+@import url('https://fonts.cdnfonts.com/css/freestyle-script');
+
 body {
 	margin: 0;
 	padding: 0;
@@ -87,7 +89,7 @@ p{
 	margin-top: 20px;
 }
 .margin-30 {
-	margin-top: 30px;
+	margin-top: 3px;
 }
 .margin-40 {
 	margin-top: 40px;
@@ -190,7 +192,7 @@ h3 {
 	padding-top:10px;
 }
 .navbar-collapse.collapse {
-	margin-left: -16px;
+	margin-left: -10px;
 	margin-top: 10px;
 }
 .menu .navbar {
@@ -229,7 +231,7 @@ h3 {
 	margin-top:5px;
 	border-top: 2px solid rgba(255,255,255,0);
 	transition: all ease 0.5s;
-	font-size : 17px;
+	font-size : 15px;
 	font-weight: bold;
 }
 .menu .nav > li.active > a {
@@ -486,11 +488,15 @@ ul.gallery li{
 }
 	.logo-caption{
 		text-transform: capitalize;
+		font-family: freestyle script;
 		color: white; 
 		position:relative; 
 		left:-40px;
 	}
-
+<style>
+                            @import url('https://fonts.cdnfonts.com/css/freestyle-script');
+</style>
+                
 	.logo-head{
 		text-transform: capitalize;color: white;font-size: 25px; position:relative; left:-40px
 	}
@@ -579,17 +585,24 @@ ul.gallery li{
 }
 
 
-@media (min-width:1900px) and (max-width: 6000px) {
+/*@media (min-width:1900px) and (max-width: 6000px) {*/
 
 	.logo-caption{
+		font-family: 'Freestyle Script', sans-serif;
 		text-transform: capitalize;
 		color: white; 
 		position:relative; 
-		left:-130px;
+		left:12px;
+		font-size: 25px;
+		bottom: 10px;
 	}
 
 	.logo-head{
-		text-transform: capitalize;color: white;font-size: 35px; position:relative; left:-130px
-	}
+		text-transform: capitalize;
+		color: white;
+		font-size: 35px; 
+		position: relative; 
+		left:-65px
+ 	}
 }
 
