--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 @font-face { font-family: EKplain; src: url('../fonts/EKPLB.ttf'); } 
-@import url('https://fonts.cdnfonts.com/css/freestyle-script');
+/*@import url('https://fonts.cdnfonts.com/css/freestyle-script');*/
 
 body {
 	margin: 0;
