--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,7 @@ h3 {
 	background-size: cover;
 	height:500px;
 	overflow: hidden;
+	width: 100%;
 }
 .botton a {
 	width: 300px;
@@ -485,303 +486,6 @@ ul.gallery li{
 .menu .header-bar-icon{
 		display: none;
 }
-@media only screen and (min-width:992px) and (max-width: 1350px) {
-.bg-offiwhite {
-	background-image: url("../images/shape-mobile.png");
-}
-	.logo-caption{
-		text-transform: capitalize;
-		font-family: freestyle script;
-		color: white; 
-		position:relative; 
-		left:-40px;
-	}
-<style>
-                            @import url('https://fonts.cdnfonts.com/css/freestyle-script');
-</style>
-                
-	.logo-head{
-		text-transform: capitalize;color: white;font-size: 25px; position:relative; left:-40px
-	}
-	
-	.menu .nav {
-		position: relative;
-		right: 10px;
-	}
-
-	.menu .oraganization h3{
-		font-size: 20px;
-	}
-
-	.menu .nav > li > a {
-		font-size: 12px;
-	}
-}
-@media only screen and (min-width:992px) and (max-width: 1200px) {
-	.bg-offiwhite {
-		background-image: url("../images/shape-mobile.png");
-	}
-
-	.logo-caption{
-		text-transform: capitalize;
-		color: white; 
-		position:relative; 
-		left:-40px;
-	}
-
-	.logo-head{
-		text-transform: capitalize;color: white;font-size: 25px; position:relative; left:-40px
-	}
-	
-	.menu .nav {
-		position: relative;
-		right: 10px;
-	}
-
-	.menu .oraganization h3{
-		font-size: 20px;
-	}
-
-	.menu .nav > li > a {
-		font-size: 12px;
-	}
-	.menu .navbar-brand>img {
-	    position: absolute;
-	    top: -45px;
-	    left: 0px;
-	    height: 200px;
-	    width: auto;
-	    padding: 7px 10px;
-	}
-	.menu .oraganization {
-	    position: absolute;
-	    top: 23px;
-	    left: 0px;
-	}
-
-
-	.menu .nav{
-		display: none;
-	}
-
-	.menu .header-bar-icon{
-		display: block;
-		font-size: 60px;
-		font-weight: bold;
-		float: right;
-		position: absolute;
-		top :5px;
-		right: 40px;
-		color : black;
-	}
-
-	.menu .header-bar-icon:active > .menu .nav{
-		display :block;
-	}
-
-	.hideshow-resnav{
-		display: grid;
-		position: absolute;
-		right: 70px;
-		top: 60px;
-	}
-}
-@media only screen and (min-width:1350px) and (max-width: 1900px) {
-	.bg-offiwhite {
-		background-image: url("../images/shape-mobile.png");
-	}
-
-	.logo-caption{
-		text-transform: capitalize;
-		color: white; 
-		position:relative; 
-		left:-40px;
-	}
-
-	.logo-head{
-		text-transform: 
-		capitalize;
-		color: white;
-		font-size: 25px; 
-		position:relative; 
-		left:-40px
-
-	}
-	
-	.menu .nav {
-		position: relative;
-		right: 10px;
-	}
-
-	.menu .oraganization h3{
-		font-size: 20px;
-	}
-
-	.menu .nav > li > a {
-		font-size: 12px;
-	}
-}
-/*tablet layout 760px*/
-@media only screen and (min-width:768px) and (max-width: 991px) {
-	.bg-offiwhite {
-		background-image: url("../images/shape-mobile.png");
-	}
-	.logo-caption{
-		text-transform: capitalize;
-		color: white; 
-		position:relative; 
-		left:-40px;
-	}
-
-	.logo-head{
-		text-transform: capitalize;color: white;font-size: 25px; position:relative; left:-40px
-	}
-	
-	.menu .nav {
-		position: relative;
-		right: 10px;
-	}
-
-	.menu .oraganization h3{
-		font-size: 20px;
-	}
-
-	.menu .nav > li > a {
-		font-size: 12px;
-	}
-
-	.menu .nav{
-		display: none;
-	}
-
-	.menu .oraganization {
-    position: absolute;
-    top: 23px;
-    left: 184px;
-   }
-
-   .menu .navbar-brand>img {
-	    position: absolute;
-	    top: -45px;
-	    left: 15px;
-	    height: 200px;
-	    width: auto;
-	    padding: 7px 10px;
-	}
-
-	.menu .header-bar-icon{
-		display: block;
-		font-size: 60px;
-		font-weight: bold;
-		float: right;
-		position: absolute;
-		top :5px;
-		right: 40px;
-		color : black;
-	}
-
-}
-@media only screen and (min-width:481px) and (max-width: 767px) {
-	.bg-offiwhite {
-		top: 0;
-		background-image: url("../images/shape-mobile.png");
-		background-repeat: repeat;
-	}
-	.popup{
-		width: 50%;
-	}
-
-	.menu .header-bar-icon{
-		display: block;
-		font-size: 60px;
-		font-weight: bold;
-		float: right;
-		position: absolute;
-		top :5px;
-		right: 40px;
-		color : black;
-	}
-
-	#myslide, .carousel-inner{
-		height: 500px;
-	}
-	#myslide .item {
-		height: 500px;
-	}
-	#myslide .carousel-caption {
-		top: 200px;
-		height: 150px;
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-
-	.menu .nav {
-		position: relative;
-		right: 10px;
-		top: 40px;
-	}
-}
-	/*mobile portrate size to mobile landscape size (devices and browser)*/
-@media (max-width: 480px) {
-	.bg-offiwhite {
-		top: 0;
-		background-image: url("../images/shape-mobile.png");
-		background-repeat: repeat;
-	}
-	.footer-bg-2 p{
-		text-align:center;
-	}
-	.menu .navbar-brand>img {
-		height:auto;
-		width: 80%;
-	}
-	.menu .navbar-toggle{
-		margin-top:20px;
-	}
-	#myslide .carousel-caption h1 {
-		font-size:36px;
-	}
-	#myslide .carousel-caption {
-		top:200px;
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-
-	.menu .nav{
-		display: none;
-	}
-
-	.menu .header-bar-icon{
-		display: block;
-		font-size: 60px;
-		font-weight: bold;
-		float: right;
-		position: absolute;
-		top :5px;
-		right: 40px;
-		color : black;
-	}
-
-	#myslide, .carousel-inner{
-		height: 500px;
-	}
-	#myslide .item {
-		height: 500px;
-	}
-	#myslide .carousel-caption {
-		top: 200px;
-		height: 150px;
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-
-	.menu .nav {
-		position: relative;
-		right: 10px;
-		top: 40px;
-	}
-}
-
 /*Styling by us from here*/
 
 .menu .oraganization h3{
@@ -810,7 +514,7 @@ ul.gallery li{
 
 	.logo-caption{
 		font-family: 'Freestyle Script', sans-serif;
-		text-transform: capitalize;
+/*		text-transform: capitalize;*/
 		color: white; 
 		position:relative; 
 		left:12px;
