--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,10 +3,11 @@
 *{
 	font-family: 'EKplain';
 }
+
 nav{
 	position: relative;
 	background-color : #65c18e;
-	height: 80px;
+	height: 92px;
 	width: 100%;	
 }
 
@@ -48,7 +49,7 @@ nav .img-header img{
 
 nav ul {
 	float: right;
-	margin-right: 20px;
+	margin-right: 90px;
 }
 
 nav ul li{
@@ -65,7 +66,7 @@ nav ul li a{
 	text-transform: uppercase;
 }
 
-nav a.active, a:hover{
+nav a.active, nav a:hover{
 	background: #65c18e;
 	transition: .5s;
 }
@@ -90,11 +91,40 @@ nav a.active, a:hover{
 	display: none;
 }
 
+.active{
+	border-bottom: 1px solid white;
+}
+
+
 
 @media (max-width: 1500px){
+	.active{
+	    background: white;    
+	    width: 100%;
+	    position: relative;
+	    left: -1%;
+	}
+	
+	#myslide{
+		height: 600px;
+	}
+
+	.active a{
+		color:#65c18e;
+	}
 	.checkbtn{
 		display: block;
 
+	}
+
+	.two-line{
+		height: 48px;
+	}
+	.three-line{
+		height: 120px;
+	}
+	.four-line{
+		height: 160px;
 	}
 
 	nav ul{
