--- a/css/style.css
+++ b/css/style.css
@@ -958,3 +958,28 @@ header .navbar .cta-btn a:hover {
   text-align: center;
   background-color: #67c18c;
 }
+
+
+.popup-container{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(0,0,0,0.90);
+  z-index: 1000;
+}
+.popup{
+  position: absolute;
+  top: -85px;
+  width: 70%;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  margin-top: 100px;
+  cursor: pointer;
+}
+.popup img{
+  width: 100%;
+  max-width: 100%;
+}
