--- a/css/style.css
+++ b/css/style.css
@@ -934,12 +934,16 @@ header .navbar .cta-btn a:hover {
 }
 
 
-/*From here, we will write the code.*/
-/*From here, we will write the code.*/
-/*From here, we will write the code.*/
-/*From here, we will write the code.*/
-/*From here, we will write the code.*/
-/*From here, we will write the code.*/
+/*From here,*/
+/*From here,*/
+/*From here,*/
+/*From here,*/
+/*From here,*/
+/*From here,*/
+/*From here,*/
+/*From here,*/
+/*From here,*/
+/*From here,*/
 
 
 .fa{
@@ -958,7 +962,6 @@ header .navbar .cta-btn a:hover {
   text-align: center;
   background-color: #67c18c;
 }
-
 
 .popup-container{
   width: 100%;
