pop-up responsive

--- a/css/style.css
+++ b/css/style.css
@@ -986,7 +986,7 @@ header .navbar .cta-btn a:hover {
   margin-bottom: 15px;
 }
 
-.popup-container {
+/* .popup-container {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -1010,4 +1010,53 @@ header .navbar .cta-btn a:hover {
 .popup img {
   width: 100%;
   max-width: 100%;
+} */
+
+
+.popup-container {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.90);
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup {
+  position: relative;
+  width: 70%;
+  max-width: 700px;
+  cursor: pointer;
+}
+
+.popup img {
+  width: 100%;
+  max-width: 100%;
+}
+
+/* Media queries for responsiveness */
+@media screen and (max-width: 767px) {
+  .popup {
+    width: 70%;
+    max-width: 70%;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .popup {
+    width: 80%;
+    max-width: 800px;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .popup {
+    width: 70%;
+    max-width: 700px;
+    align-items: center;
+  }
 }
